# Octasm

./: LICENSE.md  README.md  chip_8_assembler.opam  dune-project  octasm.opam  test.asm
.github/workflows/: test.yml
example/: digits.asm
examples/: counter.asm  sprites.asm
lib/: dune
lib/assembler/: assembler.ml  assembler.mli  assembler.mli.bak  dune
lib/assembler/encoder/: binary.ml  dune  encoder.ml  encoder.mli  nullary.ml  sprite.ml  sprite.mli  ternary.ml  unary.ml  utils.ml
lib/assembler/label/: dune  labels.ml  labels.mli
lib/assembler/utils/: assembler_utils.ml  dune
lib/error/: assembler_error.ml  assembler_error.mli  dune
lib/options/: options.ml
lib/parser/: chip8_parser.ml  chip8_parser.mli  dune
lib/parser/error/: dune  parser_error.ml  parser_error.mli
lib/parser/lexer/: chip8_lexer.mli  chip8_lexer.mll  dune
lib/parser/menhir/: dune  menhir_parser.messages  menhir_parser.mly
lib/parser/syntax/: syntax.ml
test/: dune
test/assembler/encoder/: dune  test_data_encoder.ml  test_encoder.ml  test_instruction_encoder.ml  utils.ml
